2001-04-09  Akim Demaille  <akim@epita.fr>

	* tests/yacc2.test: Don't define several times a variable, as
	automake complains.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform): Fix pr72: don't define
	$linker if there are no @files.

2001-04-09  Akim Demaille  <akim@epita.fr>

	Avoid reading twice header-vars.am as now macro_define
	complains.

	* automake.in (&define_standard_variables): Don't output the
	variables.
	(&read_main_am_file): Output first user variables, then Automake
	variables.
	Don't call twice &define_standard_variables.
	Save variable comments in $am_vars.
	(&variable_output): New.
	(&file_contents_internal): New.
	Save variable comments in $am_vars.
	(&file_contents): Use it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): The user is allowed to override
	a value if it was set by Automake, or if it was found in AC_SUBST.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform): Better locality of the
	variables.
	Use `next' to skip nonexistent variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_dump): If a variable is undefined, say
	it.
	(&check_ambiguous_conditional): Give finer error messages.
	(&macro_define): Check that a `+=' variable is not set with `='.
	Check for ambiguous definitions each time you _set_ (even with `+=')
	a variable.
	(&read_main_am_file): Perform a deep copy of %conditional.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_defined): Some callers, e.g.,
	&am_primary_prefixes, really want to know if the variable is
	defined for any condition, not `TRUE' by default.
	(&am_primary_prefixes): Give a more precise error message.

2001-04-09  Akim Demaille  <akim@epita.fr>

	(&variable_conditions): Don't include `FALSE' in the result.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions_reduce): FALSE is absorbent.