@@ -1,5 +1,17 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&make_paragraphs):  Extract from &file_contents.
+	Make it more robust than the previous RE based scheme.
+	(&file_contents): Use it.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&make_paragraphs):  Extract from &file_contents.
+	Make it more robust than the previous RE based scheme.
+	(&file_contents): Use it.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* tests/yacc2.test: Don't define several times a variable, as
 	automake complains.
 
